// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-contemplation-partial.acceptance given: [case1] two blocker reviewers, only one answered when: [t0] driver attempts --as passed with no .taken then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ r2: builder (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.builder.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.builder.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/2
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ [TEMP]/.reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ [TEMP]/.reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ review.peer 2/2
   │  ├─ slug = builder
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ [TEMP]/.reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.builder.md
   │  └─ articulate into
   │     └─ [TEMP]/.reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.builder.md
   │
   └─ when you've contemplated each reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that architect
"
`;

exports[`driver.route.peer-contemplation-partial.acceptance given: [case1] two blocker reviewers, only one answered when: [t1] driver answers architect only, then attempts --as passed then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ r2: builder (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.builder.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.builder.md
   │
   └─ ✓ judge.1 - allowed (cached)

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = builder
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ [TEMP]/.reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.builder.md
   │  └─ articulate into
   │     └─ [TEMP]/.reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.builder.md
   │
   └─ when you've contemplated each reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that builder
"
`;

exports[`driver.route.peer-contemplation-partial.acceptance given: [case1] two blocker reviewers, only one answered when: [t2] driver answers builder too, then attempts --as passed then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ r2: builder (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.builder.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.builder.md
   │
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.execute*.md
   │  ├─ reviews
   │  │   ├─ r1: architect (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │  │   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │  │   └─ r2: builder (l1, 1/3)
   │  │       ├─ approved, cached
   │  │       ├─ 1 blocker 🔴
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.builder.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.builder.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 2 --allow-nitpicks 5
   │          └─ · cached
   │             └─ on 1.execute*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
